# taso-sparse

./: .gitignore  .gitmodules  NOTES.md  README.md  REPORT.md  TODO.md  failure-report.md  taso-sparse.cabal
app/: Main.hs
content/checkpoint/: checkpoint.md
content/report/: Makefile  main.tex  refs.bib
data/: axioms.sexp  derivations.txt  substitutions.sexp
docs/: manual-derivation-10-failures.md  trace-findings.md
py/: generate_taso_substitutions.py  load_taso_substitutions.py  pyproject.toml
scripts/: SerializeAxioms.hs
scripts/py/: convert_substitution_rules.py  generate_substitution_rules.py  generate_substitution_sexpr.py  pyproject.toml
slides/checkpoint/: checkpoint.md
src/: Augment.hs  Axioms.hs  Deserialize.hs  LoadSubstitutions.hs  Rewrite.hs  Search.hs  Serialize.hs  TASO.hs
src/EventuallyDelete/: Rewrite.hs  Search.hs  Substitution.hs
src/IR/: Deserialize.hs  Graph.hs  IR.hs  Isomorphic.hs  Serialize.hs  Short.hs  Utils.hs
src/Substitutions/: Apply.hs  Apply2.hs  Match.hs  Substitution.hs
taso/substitutions/: substitution_rules.txt  substitutions.sexp
test/: DebugSearch.hs  DeserializeTests.hs  Main.hs  RewriteTests.hs  RoundTripTests.hs  SearchSpec.hs  SearchTests.hs  SerializeTests.hs  TasoSpec.hs  TestUtils.hs
test/EventuallyDelete/: RewriteSpec.hs  SearchSpec.hs  SubstitutionSpec.hs
test/IR/: CodecSpec.hs  DeserializeSpec.hs  GraphSpec.hs  IRSpec.hs  IsomorphicSpec.hs  SerializeSpec.hs
test/Substitutions/: ApplySpec.hs  MatchSpec.hs  SubstitutionSpec.hs
