cabal-version:      3.0
name:               taso-sparse
version:            1.0.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Marsella8
maintainer:         pietromax.marsella@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Axioms
        Deserialize
        IR.Graph
        IR.IR
        IR.Isomorphic
        Search
        Short
        Substitutions.Apply
        TASO
        Substitutions.Match
        Substitutions.Substitution
        Serialize
    -- other-extensions:
    build-depends:
        base ^>=4.18.3.0,
        bimap ^>=0.5.0,
        containers ^>=0.6.7
    hs-source-dirs:   src src/IR
    default-language: Haskell2010

executable taso-sparse
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.18.3.0,
        bimap ^>=0.5.0,
        containers ^>=0.6.7,
        taso-sparse

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite taso-sparse-test
    import:           warnings
    default-language: Haskell2010
    build-tool-depends:
        hspec-discover:hspec-discover
    other-modules:
        -- EventuallyDelete.RewriteSpec
        -- EventuallyDelete.SearchSpec
        -- EventuallyDelete.SubstitutionSpec
        IR.CodecSpec
        IR.DeserializeSpec
        IR.GraphSpec
        IR.IRSpec
        IR.IsomorphicSpec
        IR.SerializeSpec
        SearchSpec
        Substitutions.ApplySpec
        Substitutions.MatchSpec
        Substitutions.SubstitutionSpec
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:
        base ^>=4.18.3.0,
        bimap ^>=0.5.0,
        containers ^>=0.6.7,
        hspec ^>=2.11,
        taso-sparse
